# course-schedule-recommender-cs316

./: .gitignore  Procfile  course-schedule-recommender-firebase-adminsdk-qy064-9a5cc815e6.json  manage.py  package-lock.json  package.json  put_middleware.py  pyproject.toml  requirements.txt
backend/: authentication.py  settings.py  urls.py
backend_auth/: __init__.py  apps.py  authentication.py
my-app/: django-admin  package-lock.json  package.json  pyproject.toml  requirements.txt
my-app/backend/: settings.py  urls.py
my-app/public/: index.html  manifest.json
my-app/recommender/: models.py  views.py
my-app/src/: App.js  index.js
my-app/src/components/: Course.js  Home.js  NavRouter.js  Plan.js  Semester.js  Signup.js
my-app/src/components/firebase/: Context.js  Firebase.js
my-app/src/components/stylesheets/: App.css  Course.css  Home.css  Semester.css  (+1 more)
myAppBackend/: db.sqlite3
myAppBackend/myAppBackend/: settings.py  urls.py  wsgi.py
public/: index.html
recommender/: admin.py  models.py  permissions.py  serializers.py  views.py
recommender/migrations/: 0001_initial.py  0002_remove_student_user.py  0002_student_user.py
src/: index.js
src/components/: Account.js  Course.js  Home.js  Login.js  NavRouter.js  Plan.js  Semester.js  Signup.js
src/components/firebase/: Firebase.js
src/components/stylesheets/: Account.css  Course.css  Home.css  Login.css  Plan.css  Semester.css
students/: models.py
students/migrations/: 0001_initial.py  0002_auto_20191126_0246.py  0002_rename_user_table.py  0002_user_student.py  0003_remove_user_netid.py
